# trade-remedies-public

./: .all-contributorsrc  .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CODEOWNERS  Dockerfile  Makefile  Procfile  README.md  docker-compose-test.yml  docker-compose.yml  example.env  gulpfile.js  local.env.example  manifest.yml  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_e2e_tests.sh  start.sh  test.env
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.github/: dependabot.yml
.github/workflows/: recreate-poetry-requirements.yml
.pii-secret-hook/file_content/: pii-secret-log
.pii-secret-hook/ner/: pii-secret-log
cypress/e2e/basic-tests/: login_page.cy.js
cypress/support/: e2e.js
e2e/: conftest.py  pytest.ini  requirements.txt  test_public_inviting_repr_to_your_org.py  test_public_login.py  test_public_register_interest_in_case.py  test_public_register_login.py  utils.py
fitness/: fitness_metrics.db
requirements/: base.in  base.txt  dev.in  dev.txt  prod.txt
requirements.in/: base.in  dev.in  prod.in
trade_remedies_public/: .coveragerc  .flake8  conftest.py  manage.py  pytest.ini
trade_remedies_public/cases/: constants.py  forms.py  submissions.py  tests.py  urls.py  utils.py  views.py
trade_remedies_public/cases/v2_forms/: accept_representative_invite.py  invite.py  registration_of_interest.py
trade_remedies_public/cases/v2_views/: accept_invite.py  accept_own_org_invitation.py  accept_representative_invitation.py  active_investigations.py  invite.py  registration_of_interest.py
trade_remedies_public/config/: base_views.py  cf_env.py  context_processors.py  db.sqlite3  decorators.py  env.py  forms.py  middleware.py  urls.py  utils.py  version.py  wsgi.py
trade_remedies_public/config/forms/: __init__.py  base_forms.py  validators.py
trade_remedies_public/cookies/: apps.py  views.py
trade_remedies_public/core/: auth.py  base.py  constants.py  decorators.py  exceptions.py  models.py  tests.py  utils.py  validators.py  views.py
trade_remedies_public/documents/: forms.py  tests.py  upload_handler.py  urls.py  views.py
trade_remedies_public/features/: api_test_objects.py  environment.py  fixtures.py
trade_remedies_public/functional_tests/: test_forgotten_password.py  test_me.py
trade_remedies_public/govuk_template/: __init__.py  apps.py
trade_remedies_public/login/: decorators.py  views.py
trade_remedies_public/password/: apps.py  decorators.py  tests.py  views.py
trade_remedies_public/registration/: forms.py  tests.py  views.py
trade_remedies_public/templates/: 400.html  403.html  404.html  500.html  base.html  dashboard.html  feedback_complete.html  feedback_complete_inner.html  feedback_form.html  feedback_form_inner.html  file_scan.html  holding_page.html  home.html  invite_home.html  stub.html
trade_remedies_public/trade_remedies_public/: constants.py  context_processors.py  db.sqlite3  gunicorn.py  urls.py  version.py  wsgi.py
trade_remedies_public/v2_api_client/: client.py
v2_api_client/: client.py  library.py  mixins.py
(+429 files in other folders)
