[tool.poetry]
name = "Trade Remedies Public"
version = "1.0.0"
description = "Trade Remedies Public"
authors = ["Chris Pettinga <chris.pettinga@digital.trade.gov.uk>"]

[build-system]
requires = ["poetry-core^1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.29.6"
Django = "4.2.14"
certifi = "^2023.07.22"
django-audit-log-middleware = "0.0.4"
django-basicauth = "0.5.2"
django-chunk-upload-handlers = "0.0.11"
django-compressor = "*"
django-countries = "7.2.1"
django-csp = "3.7"
django-environ = "0.11.2"
django-extensions = "3.2.3"
django-govuk-forms = "0.5"
django-govuk-template = "0.6"
django-log-formatter-ecs = "0.0.5"
django-redis = "5.2.0"
django-sass-processor = "*"
django-storages = "1.11.1"
django-timezone-field = "4.2.3"
dpath = "2.1.6"
feed-gov-back = "0.4"
libsass = "*"
phonenumbers = "*"
py = "^1.10.0"
pytz = "*"
redis = "4.4.4"
requests = "2.32.2"
sentry-sdk = "1.14.0"
sqlparse = "0.5.0"
urllib3 = "1.26.19"
werkzeug = "^2.2.3"
whitenoise = "6.6.0"
pillow = "^10.3.0"
trade-remedies-client = {git = "https://github.com/uktrade/trade-remedies-client.git", rev = "master"}
v2-api-client = {git = "https://github.com/uktrade/trs_v2_api_client.git", rev = "master"}
gunicorn = "22.0.0"
gevent = "23.9.1"
lxml = "4.9.1"

[tool.poetry.dev-dependencies]
behave-django = "1.4.0"
black = "24.3.0"
coverage = "*"
codecov = "2.1.13"
djhtml = "*"
flake8 = "*"
ipython = "^8.10"
matplotlib = "*"
pip-tools = "^6.5.0"
pyproject-flake8 = "5.0.4.post1"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
pytest-pythonpath = "*"
selenium = "3.141.0"
wheel = "^0.38.1"
fitness-functions = {git = "https://github.com/uktrade/fitness-functions", rev = "master"}

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | env
  | .venv
  | tests-reports
)/
'''

[tool.flake8]
max-line-length = 100
max-complexity = 10
per-file-ignores = '__init__.py: F401'
import_order_style = 'smarkets'
exclude = '''
/(
    */migrations/*
    | __pycache__
    | manage.py
    | env/*
    | venv/*
    | .venv/*
    | */settings/*
)/
'''
ignore = '''
/(
    D100
    | D104
    | D106
    | D200
    | D203
    | D205
    | D400
    | D401
    | W503
    | W504
    | E704
    | E231
    | F841
    | E722
    | C901
)/
'''
application-import-names = '''
/(
    cases
    | contacts
    | core
    | documents
    | govuk_template
    | manage.py
    | tasks
    | templates
    | trade_remedies_caseworker
    | users
)/
'''

[tool.pytest.ini_options]
addopts = '''
    -p no:warnings
    --cov=.
    --no-cov-on-fail
    --cov-config=.coveragerc
    --cov-branch
    --ignore=staticfiles
    -n 4
    -m "not version2"
'''
python_classes='Test*'

python_files = ["test_*.py", "tests.py"]

markers = [
    "version2: marks tests that require API_V2_ENABLED env var set",
    "functional: marks tests that exercise multiple units, e.g. login journey"
    ]

DJANGO_SETTINGS_MODULE = "trade_remedies_public.config.settings.test"
pythonpaths = ". trade_remedies_public"
